@@ -106,7 +106,7 @@
 ;; edit
 (setq-default tab-width 4)
 (setq-default comment-column 40)        ; [C-x ;] (set-comment-column)
-(setq default-major-mode 'text-mode)
+(setq-default major-mode 'text-mode)    ; (setq default-major-mode 'text-mode)
 (setq bookmark-save-flag 1)
 (global-auto-revert-mode t)
 ;; (setq require-final-newline 'ask)
@@ -409,15 +409,16 @@ Like eclipse's Ctrl+Alt+F."
   (interactive "F")
   (if (cxx-file-p file)
       (let ((buffer (find-file-noselect file))) ;; open buffer
-        (set-buffer buffer)
-        ;; (mark-whole-buffer)
-        (when (fboundp 'whitespace-cleanup)
-          (whitespace-cleanup))
-        (untabify (point-min) (point-max))
-        (indent-region (point-min) (point-max))
-        (save-buffer)
-        (kill-buffer)
-        (message "Formated c++ file:%s" file))
+        (save-excursion
+          (set-buffer buffer)
+          ;; (mark-whole-buffer)
+          (when (fboundp 'whitespace-cleanup)
+            (whitespace-cleanup))
+          (untabify (point-min) (point-max))
+          (indent-region (point-min) (point-max))
+          (save-buffer)
+          (kill-buffer)
+          (message "Formated c++ file:%s" file)))
     (message "%s isn't a c++ file" file)))
 
 (defun format-cxx-directory (dirname)
