@@ -1,3 +1,7 @@
+2011-08-10  Meteor Liu  <meteor1113@gmail.com>
+
+	* init-basic.el (format-cxx-file): Remove warning for set-buffer.
+
 2011-08-03  Meteor Liu  <meteor1113@gmail.com>
 
 	* init-basic.el (fboundp): Change cua-rectangle-mark-key to [C-M-return].
